# agenda_monitoria

./: .gitignore  .pylintrc  README.md  db.sqlite3  pyproject.toml
_docs/: ideia.md
apps/agendamento/: apps.py  models.py  urls.py  views.py
apps/agendamento/migrations/: 0001_initial.py
apps/disciplina/: apps.py  forms.py  models.py  urls.py  views.py
apps/disciplina/migrations/: 0001_initial.py
apps/home/: urls.py  views.py
apps/horario/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/horario/migrations/: 0001_initial.py
apps/monitor/: apps.py
apps/user/: forms.py  models.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_options_alter_user_table.py
core/: __init__.py  decorators.py  settings.py  urls.py
docs/: ideia.md
templates/: base.html  footer.html  header.html  index.html  manager.html
templates/agendamento/: list.html
templates/css/: home.css  reset.css  style.css
templates/disciplina/: create.html  list.html  update.html
templates/horario/: create.html  details.html  list.html  my.html
templates/registration/: login.html
templates/user/: create.html  delete.html  detail.html  list.html  update.html
theme/static_src/: package-lock.json
