[project]
name = "agenda-monitoria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "pillow>=12.1.1",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "cookiecutter>=2.7.1",
    "django-tailwind>=4.4.2",
    "pylint>=4.0.5",
]
